--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -1375,7 +1375,7 @@ Este método permite iniciar o processo de pagamento na Cielo LIO.
 
 ## Processo de Pagamento
 
-Existem 4 formas diferentes de chamar o método checkoutOrder:
+Estão disponíveis algumas formas de chamar o método checkoutOrder:
 
 ![checkoutorder formas](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/checkoutOrder.jpg)
 
@@ -1517,83 +1517,15 @@ Nessa forma de pagamento é possível enviar qualquer valor a ser pago (valor to
 Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-valor.jpg)
 
-### 3. Pagamento parcelado
 
-Para efetuar um pagamento parcelado, é preciso consultar as formas de pagamento utilizando a função disponibilizada no SDK, escolher crédito no produto primário e crédito no produto secundário **obrigatoriamente** e informar o número de parcelas no momento do checkout. É importante lembrar que se os códigos de pagamento forem informados incorretamente ou se o número de parcelas não for maior do que **0**, o sistema acusará erro.
-Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
-
-| Atributo        | Descrição  | Domínio|
-|-----------------|--------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | `String` |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
-| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
-| installments | Número de parcelas. | `Long` |
-| paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
-
-**Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
-
-```java
-orderManager.checkoutOrder(orderId, value,  primaryCode, secondaryCode, installments,  paymentListener);
-```
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
-
-### 4. Pagamento informando email
-
-Neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
-Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
-
-| Atributo        | Descrição  | Domínio|
-|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | `String` |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
-| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
-| installments | Número de parcelas. | `Long` |
-| email | Email informado | `String` |
-| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
-
-**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
-
-```java
-orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, paymentListener);
-```
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
-
-### 5. Pagamento informando EC
-
-Esse método é disponibilizado para o caso de ser necessário efetuar um pagamento em um EC diferente do principal. O EC informado deve estar configurado na LIO na hora da inicialização para que funcione ou o SDK irá enviar uma exceção do tipo `InvalidParameterException`.
-Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
-
-| Atributo        | Descrição  | Domínio|
-|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
-| orderId         | O identificador do pedido a ser pago. | `String` |
-| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
-| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
-| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
-| installments | Número de parcelas. | `Long` |
-| email | Email informado | `String` |
-| merchantCode | Número do EC | `String` |
-| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
-
-**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
-
-```java
-orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, merchantCode,paymentListener);
-```
-
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
-
-### 6. Pagamento direto
+### 3. Pagamento direto
 
 No Pagamento Direto, o valor a ser pago e a forma de pagamento (crédito, débito, parcelado) será definido dentro da aplicação do parceiro. Na sequência o fluxo de pagamento da Cielo LIO é iniciado (inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail comprovante).
 
-Para realizar o pagamento direto é necessário, primeiramente, verificar os tipos de pagamento habilitados para Cielo LIO do estabelecimento comercial utilizando a função de consulta de formas de pagamentos habilitadas para LIO:
+
+#### Códigos de Pagamento
+
+Para realizar o pagamento direto é necessário, primeiramente, verificar os tipos de pagamento habilitados para Cielo LIO do estabelecimento comercial utilizando a função de consulta abaixo:
 
 ```java
 ArrayList<PrimaryProduct> paymentTypes = orderManager.retrievePaymentType();
@@ -1624,6 +1556,19 @@ orderManager.checkoutOrder(orderId, primaryCode, secondaryCode, paymentListener)
 
 ```
 
+Na versão 0.19.0 do SDK foram introduzidos códigos de pagamento para as principais operações disponibilizadas na LIO, facilitando assim as chamadas de pagamento. É importante ressaltar que as formas de pagamento são configuradas de acordo com o estabelecimento comercial, e nem todas estarão disponíveis em todas os terminais. Caso o método de pagamento selecionado não esteja disponível na LIO em questão, ocorrerá uma exceção do tipo `NoSuchElementException`.
+
+| PaymentCode            |
+|------------------------|
+| DEBITO_AVISTA          |
+| DEBITO_PREDATADO       |
+| CREDITO_AVISTA         |
+| CREDITO_PARCELADO_LOJA |
+| CREDITO_PARCELADO_ADM  |
+| PRE_AUTORIZACAO        |
+| VOUCHER_ALIMENTACAO    |
+| VOUCHER_REFEICAO       |
+
 Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma de pagamento. Para fazer a chamada é necessário enviar os seguintes parâmetros:
 
 | Atributo        | Descrição  | Domínio|
@@ -1642,8 +1587,105 @@ Nessa forma de pagamento é possível enviar qualquer valor a ser pago e a forma
 orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, paymentListener);
 ```
 
-Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento de valor:
+ou
+
+```java
+orderManager.checkoutOrder(orderId, value, paymentCode, paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento direto:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-direto.jpg)
+
+
+### 4. Pagamento parcelado
+
+Para efetuar um pagamento parcelado, é preciso consultar as formas de pagamento utilizando a função disponibilizada no SDK, escolher crédito no produto primário e crédito no produto secundário **obrigatoriamente** e informar o número de parcelas no momento do checkout. É importante lembrar que se os códigos de pagamento forem informados incorretamente ou se o número de parcelas não for maior do que **0**, o sistema acusará erro.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|--------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| paymentListener | Callback de pagamento. | `cielo.sdk.order.payment.PaymentListener` |
+
+**Fluxo da transação utilizando o pagamento parcelado da Cielo LIO**
+
+```java
+orderManager.checkoutOrder(orderId, value,  primaryCode, secondaryCode, installments,  paymentListener);
+```
+
+ou 
+
+```java
+orderManager.checkoutOrderStore(orderId, value,  installments,  paymentListener);
+```
+
+ou
+
+```java
+orderManager.checkoutOrderAdm(orderId, value,  installments,  paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento parcelado:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+### 5. Pagamento informando email
+
+Neste caso é possível informar o email para facilitar o preenchimento na hora de enviar o comprovante para o cliente.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| email | Email informado | `String` |
+| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```java
+orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
+
+### 6. Pagamento informando EC
+
+Esse método é disponibilizado para o caso de ser necessário efetuar um pagamento em um EC diferente do principal. O EC informado deve estar configurado na LIO na hora da inicialização para que funcione ou o SDK irá enviar uma exceção do tipo `InvalidParameterException`.
+Nessa forma de pagamento, é necessário apenas fazer a chamada do método enviando os seguintes parâmetros:
+
+| Atributo        | Descrição  | Domínio|
+|-----------------|--------------------------------------------------------------------------------------------------|-----------------------------------------|
+| orderId         | O identificador do pedido a ser pago. | `String` |
+| value         | Valor a ser pago. R$ 10,00 deve ser enviado como 1000. | `Long` |
+| primaryCode         | Código identificador do método primário de pagamento ex.: Débito, Crédito. | `String` |
+| secondaryCode         | Código identificador do método secundário de pagamento ex.: À vista, Parcelado. | `String` |
+| installments | Número de parcelas. | `Long` |
+| email | Email informado | `String` |
+| merchantCode | Número do EC | `String` |
+| paymentListener | Callback de pagamento | `cielo.sdk.order.payment.PaymentListener` |
+
+**Fluxo da transação utilizando o pagamento direto da Cielo LIO**
+
+```java
+orderManager.checkoutOrder(orderId, value, primaryCode, secondaryCode, installments, email, merchantCode, paymentListener);
+```
+
+ou
+
+```java
+orderManager.checkoutOrder(orderId, value, paymentCode, installments, email, merchantCode, paymentListener);
+```
+
+Abaixo, segue um exemplo do fluxo com as telas exibidas durante o pagamento com email:
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
 ## Cancelamento
 
