--- a/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
+++ b/_i18n/pt/_posts/cielo-lio/2017-01-01-cielo-lio.md
@@ -609,7 +609,7 @@ Segue abaixo a tabela com os dados mais relevantes existentes nesse mapa:
 
 ### 1. Requisição de pagamento
 
-Para realizar um request de pagamento é preciso informar, pelo menos, o OrderId criado anteriormamente. Dependendo dos parametros informados na hora de montar o request de pagamento, um dos processos citados abaixo será iniciado. No Pagamento parcial, o valor do pagamento é informado dentro do fluxo de telas da Cielo LIO. Na sequência, o fluxo de pagamento da Cielo LIO é iniciado (definir o valor a ser pago, escolher a forma de pagamento, inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail o comprovante).
+Para realizar um requeste de pagamento é preciso informar, pelo menos, o OrderId criado anteriormamente. Dependendo dos parametros informados na hora de montar o request de pagamento, um dos processos citados acima será iniciado. No Pagamento parcial, o valor do pagamento é informado dentro do fluxo de telas da Cielo LIO. Na sequência, o fluxo de pagamento da Cielo LIO é iniciado (definir o valor a ser pago, escolher a forma de pagamento, inserir o cartão, digitar a senha e visualizar e/ou enviar por e-mail o comprovante).
 
 ```java
 CheckoutRequest request = new CheckoutRequest.Builder()
@@ -662,7 +662,7 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas informando apenas o Orde
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcial.jpg)
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId e o Valor:
-![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/fluxo-pagamento-valores.jpg)
+![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-valor.jpg)
 
 Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o Valor e o código de pagamento:
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-direto.jpg)
@@ -676,8 +676,6 @@ Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o 
 Abaixo, segue um exemplo do fluxo com as telas exibidas informando o OrderId, o Valor, o código de pagamento, o número de parcelas, o EC e o email
 ![fluxo parcial](https://desenvolvedores.cielo.com.br/api-portal/sites/default/files/pagamento-parcelado.jpg)
 
->**Atenção:** Para a utilização do EC, é necessário uma pré habilitação junto a Cielo, para o recebimento com MULTI-EC.
-
 ## Cancelamento
 
 Para tratar a resposta do cancelamento, você deverá utilizar o seguinte callback como parâmetro do método de `cancelOrder()` para receber os estados relacionados ao cancelamento.
@@ -689,7 +687,6 @@ As seguintes ações pode ser notificadas:
 • onError - Quando acontece um erro no cancelamento do pedido.
 
 ```java
-
 CancellationListener cancellationListener = new CancellationListener() {
     @Override
     public void onSuccess(Order cancelledOrder) {
@@ -706,7 +703,6 @@ CancellationListener cancellationListener = new CancellationListener() {
         Log.d("SDKClient", "Houve um erro no cancelamento");
     }
 });
-
 ```
 
 ### Cancelar Pagamento
@@ -723,6 +719,7 @@ CancellationRequest request = new CancellationRequest.Builder()
                 .ec("0000000000000003") /* Opcional */
                 .build();
 ```
+
 Abaixo é detalhado cada um dos parâmetros enviados no método:
 
 | Atributo        | Descrição  | Domínio|
